...
            "state" : "translated",
            "value" : "Pulsos por compás: %lld"
          }
        }
      }
    },
    "BPM" : {
      "comment" : "A label that displays \"BPM\" and a text field for entering the song's BPM.",
      "isCommentAutoGenerated" : true,
      "shouldTranslate" : false
    },
    "Cancel" : {
      "comment" : "Button label for cancelling an action.",
...
            "state" : "translated",
            "value" : "Introduce un tempo y un número de pulsos válidos."
          }
        }
      }
    },
    "Every" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cada"
          }
...
            "state" : "translated",
            "value" : "Aumentar BPM"
          }
        }
      }
    },
    "Increase by" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aumentar en"
          }
...
            "state" : "translated",
            "value" : "Racha Más Larga"
          }
        }
      }
    },
    "Metronome" : {
      "comment" : "A label for the metronome tab.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Patrón"
          }
        }
      }
    },
    "Pause" : {
      "comment" : "A label for the Play/Pause button on the metronome screen, while the metronome is currently playing",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pausar"
          }
        }
      }
    },
    "Play" : {
      "comment" : "A label for the Play/Pause button on the metronome screen, while the metronome is currently paused",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reproducir"
...
    },
    "Tempo" : {
      "comment" : "A section of the song details view that allows the user to set the tempo of the song.",
      "isCommentAutoGenerated" : true,
      "shouldTranslate" : false
    },
    "Tempo Ramp" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rampa de tempo"
          }
...
